# academic-project-template

./: .cursorrules  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  conftest.py  noxfile.py  pixi_setup.md  pyproject.toml  test_cli_debug.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  labeler.yml  release-drafter.yml
.github/workflows/: labeler.yml  lint.yml  release-drafter.yml  release.yml  tests.yml
docs/: _quarto.yml  api.md  codeofconduct.md  conf.py  contributing.md  index.md  license.md  usage.md
docs/arxiv-article/: arxiv-article.qmd  arxiv-article.tex
docs/project-page/: index.md
docs/project-page/css/: index.css
docs/project-page/js/: index.js
docs/scripts/: shortcodes.lua
docs/website/: website.md
docs/website/css/: index.css
docs/website/js/: index.js
src/pixi_project/: cli.py  sample_python_code.py
tests/: __init__.py  test_cli.py  test_sample_python_code.py
