[project]
name = "pixi-project"
version = "0.1.0"
description = "A template for creating a Python project with Pixi"
authors = [{name = "eLearning Hub", email = "behzad@mechatronics3d.com"}]
requires-python = ">= 3.11"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "python-dotenv>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/eLearningHub/pixi-template"
Repository = "https://github.com/eLearningHub/pixi-template.git"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
pixi-project = { path = ".", editable = true }

[tool.pixi.feature.dev.pypi-dependencies]
pytest = ">=8.0.0"
pytest-cov = ">=4.1.0"
pytest-mock = ">=3.10.0"
black = ">=23.1.0"
isort = ">=5.12.0"
flake8 = ">=6.0.0"
mypy = ">=1.0.0"
bandit = ">=1.7.5"
safety = ">=2.3.5"
pre-commit = ">=3.0.0"
sphinx = ">=6.1.3"
sphinx-click = ">=4.4.0"
furo = ">=2023.3.27"
myst-parser = ">=1.0.0"
xdoctest = ">=1.1.0"
coverage = ">=7.2.1"
pyupgrade = ">=3.3.1"
nox = ">=2023.4.22"

[tool.pixi.tasks]
start = "python src/main.py"
test = "pytest tests/"
lint = "ruff check ."
format = "ruff format ."
docs = "cd docs; quarto render"
mkdocs = "mkdocs serve"
cli = """python -m src.pixi_project.cli"""
install-cli = "pip install -e ."
install-dev = """
pip install pytest pytest-cov pytest-mock black isort flake8 mypy bandit safety pre-commit sphinx sphinx-click furo myst-parser xdoctest coverage pyupgrade nox
"""
install-quarto-extensions = '''
cd docs;
quarto add quarto-ext/fontawesome;
quarto install extension grantmcdermott/quarto-revealjs-clean;
quarto install extension mikemahoney218/quarto-arxiv;
quarto install tinytex;
'''
sdocs = "python -m pip install -e . && cd docs && python -m sphinx -b html . _build"

[tool.pixi.dependencies]
pytest = ">=8.3.5,<9"
pytest-cov = ">=6.0.0,<7"
pytest-mock = ">=3.14.0,<4"
typer = ">=0.15.2,<0.16"
typing = ">=3.10.0.0,<4"
quarto = ">=1.5.57,<2"
deno = ">=1.41.0,<1.42"
python-pptx = ">=1.0.2,<2"
jupyter = ">=1.1.1,<2"
pandas = ">=2.2.3,<3"
numpy = ">=2.2.1,<3"
scikit-learn = "*"
statsmodels = ">=0.14.4,<0.15"
python-dotenv = ">=1.0.1,<2"
typeguard = ">=4.4.2,<5"
pip = ">=25.0.1,<26"
ruff = ">=0.10.0,<0.11"
sphinx = ">=8.2.3,<9"
sphinx-click = ">=6.0.0,<7"
furo = ">=2024.8.6,<2025"
myst-parser = ">=4.0.1,<5"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
markers = ["integration: marks tests as integration tests that require real credentials"]

[tool.ruff]
select = ["E", "F", "I", "N", "W", "B", "UP"]
line-length = 100
